added header and main sections

--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    
+    <title>The Jazz Table</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Allison Hembd">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
+    <header>
+      <div class="logo">
+        <img src="assets/images/logo.png" alt="Jazz Table logo">
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="" class="secondary-text">HOME</a></li>
+          <li><a href="" class="secondary-text">LOCATIONS</a></li>
+          <li><a href="" class="secondary-text">MENU</a></li>
+          <li><a href="" class="secondary-text">ABOUT</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h1 class="secondary-text">MUSIC. CLASS. FOOD.</h1>
+      <h3 class="secondary-text">In Austin &amp; San Francisco</h3>
+      <br>
+      <br>
+      <a class="button primary-background secondary-text" href="">
+      Reserve a table</a>
+      <br>
+      <br>
+      <br>
+      <br>
+      <h2 class="secondary-text">Offerte Especiali</h2>
+
+      <section> 
+        <div class="special secondary-background">
+          <img src="assets/images/zucchini-salad.png" alt="zucchini salad">
+          <p class="primary-text">Zucchini Salad</p>
+        </div>
+
+        <div class="special secondary-background">
+          <img src="assets/images/chicken-parm.png" alt="chicken parm">
+          <p class="primary-text">Chicken Parmesean</p>
+        </div>
+
+        <div class="special secondary-background">
+          <img src="assets/images/spaghetti-bolognese.png" alt="spaghetti bolognese">
+          <p class="primary-text">Spaghetti Bolognese</p>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      
+    </footer>
 
   </body>
 
