Preparing to publish

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="Allison Hembd">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  
   </head>
 
   <body>
@@ -29,36 +30,60 @@
     <main>
       <h1 class="secondary-text">MUSIC. CLASS. FOOD.</h1>
       <h3 class="secondary-text">In Austin &amp; San Francisco</h3>
-      <br>
-      <br>
       <a class="button primary-background secondary-text" href="">
       Reserve a table</a>
-      <br>
-      <br>
-      <br>
-      <br>
-      <h2 class="secondary-text">Offerte Especiali</h2>
+      <h2 class="secondary-text">Offerte Speciali</h2>
 
       <section> 
-        <div class="special secondary-background">
-          <img src="assets/images/zucchini-salad.png" alt="zucchini salad">
-          <p class="primary-text">Zucchini Salad</p>
+        <div class="col-third">
+          <div class="special secondary-background">
+            <img src="assets/images/zucchini-salad.png" alt="zucchini salad">
+            <p class="primary-text">Zucchini Salad</p>
+          </div>
         </div>
 
-        <div class="special secondary-background">
-          <img src="assets/images/chicken-parm.png" alt="chicken parm">
-          <p class="primary-text">Chicken Parmesean</p>
+        <div class="col-third">
+          <div class="special secondary-background">
+            <img src="assets/images/chicken-parm.png" alt="chicken parm">
+            <p class="primary-text">Chicken Parmesean</p>
+          </div>
+        </div>  
+
+        <div class="col-third">
+          <div class="special secondary-background">
+            <img src="assets/images/spaghetti-bolognese.png" alt="spaghetti bolognese">
+            <p class="primary-text">Spaghetti Bolognese</p>
+          </div>
         </div>
 
-        <div class="special secondary-background">
-          <img src="assets/images/spaghetti-bolognese.png" alt="spaghetti bolognese">
-          <p class="primary-text">Spaghetti Bolognese</p>
-        </div>
       </section>
     </main>
 
-    <footer>
+    <footer class="primary-background secondary-text">
+      <div class="locations">
+        <div class="col-half">
+          <img src="assets/images/austin.png" alt="Austin">
+            <h3>The Jazz Table, Austin<h3>
+            <span> 
+            103 Congress Avenue<br>
+            Austin, Texas
+            </span>
+        </div>
       
+
+        <div class="col-half">
+          <img src="assets/images/sanfrancisco.png" alt="San Francisco">
+              <h3>The Jazz Table, SF<h3>
+              <span> 
+              103 Market Street<br>
+              San Francisco, California
+              </span>
+        </div>
+      </div>
+
+      <div class="logo">
+        <img src="assets/images/icon.png">
+      </div>
     </footer>
 
   </body>
